Push almost final changes

--- a/Likely_Examiner_Questions.tex
+++ b/Likely_Examiner_Questions.tex
@@ -32,7 +32,8 @@ After having read parts of the thesis, these are some of the questions people th
     
     \item VALOR
     \begin{itemize}
-        \item Understand the origin of the dominant systematics + how they are modelled. 
+        \item Understand the origin of the dominant systematics + how they are modelled.
+        \item Cross-section uncertainties are modelled on hydrogen and deuterium data - how/why is this relevant for argon? Only considers \numu - does this map to \nue?  
         \item Why do exclusive samples help. 
     \end{itemize}
 \end{itemize}
