--- a/appendices.tex
+++ b/appendices.tex
@@ -162,7 +162,7 @@ The impact of fully correlated uncertainties up to 10\% are shown on the left of
 
 \newpage
 %Instead of exploring the impact from fully uncorrelated uncertainties or a constant uncorrelated uncertainty across all bins in a detector,
-\FigureRef{fig:numu_bulk_uncorr} considers the case where a single set of bins are poorly constrained using the same scheme outlined in \SectionRef{Impact of Additional Efficiency Systematics}. In each case, the uncorrelated uncertainty for the bins of interest are again set to 2\% in each of the \gls{sbn} detectors, whilst the rest of the uncorrelated uncertainties are set to 0.5\% and the fully correlated uncertainty is fixed at 2\%. Increasing the uncertainty associated with the background bins has the smallest impact whereas increasing the uncertainty for the high and low energy bins has the largest impact at large and small $\Delta m^2_{41}$ respectively. The peak energy bins also contribute significantly around $\Delta m^2_{41}$ equal to 1 eV$^2$ and 10 eV$^2$. 
+\FigureRef{fig:numu_bulk_uncorr} considers the case where a single set of bins are poorly constrained using the same scheme outlined in \SectionRef{sec:Impact of Additional Efficiency Systematics}. In each case, the uncorrelated uncertainty for the bins of interest are again set to 2\% in each of the \gls{sbn} detectors, whilst the rest of the uncorrelated uncertainties are set to 0.5\% and the fully correlated uncertainty is fixed at 2\%. Increasing the uncertainty associated with the background bins has the smallest impact whereas increasing the uncertainty for the high and low energy bins has the largest impact at large and small $\Delta m^2_{41}$ respectively. The peak energy bins also contribute significantly around $\Delta m^2_{41}$ equal to 1 eV$^2$ and 10 eV$^2$. 
 
 
 \begin{figure}[!h]
