--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -831,7 +831,7 @@ $\delta_{CP}$       & \multicolumn{1}{r}{$1.36^{+0.20}_{-0.16} \pi$ rad}        
 \newpage
 
 \paragraph{$\Delta m^2_{21}$ and $sin^22\theta_{12}$}
-The $\Delta m^2_{21}$ and $sin^22\theta_{12}$ parameter values are determined from the solar neutrino experiments, Homestake, GALLEX/GNO, SAGE, Borexino, phases I-IV of \gls{sk} and the three phases of \gls{sno} \cite{Measurement_of_the_Solar_Electron_Neutrino_Flux_with_the_Homestake_Chlorine_Detector}\cite{Gallex_reanalysis}\cite{Measurement_of_the_solar_neutrino_capture_rate_with_gallium_metal}\cite{Precision_measurement_of_the_7Be_solar_neutrino_interaction_rate_in_Borexino}\cite{Final_results_of_Borexino_PhaseI_on_low_energy_solar_neutrino_spectroscopy} \cite{Solar_neutrino_measurements_in_Super-Kamiokande-I}\cite{Solar_neutrino_measurements_in_Super-Kamiokande-II}\cite{Solar_neutrino_results_in_Super-Kamiokande-III}\cite{8B_solar_neutrino_spectrum_measurement_using_Super-Kamiokande_IV}\cite{Combined_Analysis_of_all_Three_Phases_of_Solar_Neutrino_Data_from_the_Sudbury_Neutrino_Observatory}. The relevant standard solar model used in the combined analysis is AGSS09 \cite{AGSS09}. In addition to the solar experiments, the KamLAND experiment, which detected neutrinos from a number of nuclear reactors over a long baseline ($\sim180$ km), also measured the solar mass splitting and mixing angles. \cite{Precision_Measurement_of_Neutrino_Oscillation_Parameters_with_KamLAND}\cite{Constraints_on_theta13_from_A_Three_Flavor_Oscillation_Analysis_of_Reactor_Antineutrinos_at_KamLAND}\cite{Reactor_On-Off_Antineutrino_Measurement_with_KamLAND} A global fit of the solar experiments and the KamLand results are shown in \FigureRef{fig:theta_21_deltamsq_21_best_fit} along with a combined fit of the two \cite{2020_global_reassessment_of_the_neutrino_oscillation_picture}. The best fit point from the allowed region of the solar experiments is highly disfavoured by the KamLAND experiment, however, the 99\% confidence level allowed regions do overlap. 
+The $\Delta m^2_{21}$ and $sin^22\theta_{12}$ parameter values are determined from the solar neutrino experiments, Homestake, GALLEX/GNO, SAGE, Borexino, phases I-IV of \gls{sk} and the three phases of \gls{sno} \cite{Gallex_reanalysis}\cite{Measurement_of_the_Solar_Electron_Neutrino_Flux_with_the_Homestake_Chlorine_Detector}\cite{Measurement_of_the_solar_neutrino_capture_rate_with_gallium_metal}\cite{Precision_measurement_of_the_7Be_solar_neutrino_interaction_rate_in_Borexino}\cite{Final_results_of_Borexino_PhaseI_on_low_energy_solar_neutrino_spectroscopy} \cite{Solar_neutrino_measurements_in_Super-Kamiokande-I}\cite{Solar_neutrino_measurements_in_Super-Kamiokande-II}\cite{Solar_neutrino_results_in_Super-Kamiokande-III}\cite{8B_solar_neutrino_spectrum_measurement_using_Super-Kamiokande_IV}\cite{Combined_Analysis_of_all_Three_Phases_of_Solar_Neutrino_Data_from_the_Sudbury_Neutrino_Observatory}. The relevant standard solar model used in the combined analysis is AGSS09 \cite{AGSS09}. In addition to the solar experiments, the KamLAND experiment, which detected neutrinos from a number of nuclear reactors over a long baseline ($\sim180$ km), also measured the solar mass splitting and mixing angles. \cite{Precision_Measurement_of_Neutrino_Oscillation_Parameters_with_KamLAND}\cite{Constraints_on_theta13_from_A_Three_Flavor_Oscillation_Analysis_of_Reactor_Antineutrinos_at_KamLAND}\cite{Reactor_On-Off_Antineutrino_Measurement_with_KamLAND} A global fit of the solar experiments and the KamLand results are shown in \FigureRef{fig:theta_21_deltamsq_21_best_fit} along with a combined fit of the two \cite{2020_global_reassessment_of_the_neutrino_oscillation_picture}. The best fit point from the allowed region of the solar experiments is highly disfavoured by the KamLAND experiment, however, the 99\% confidence level allowed regions do overlap. 
 
 \begin{figure}[h!]
     \centering
@@ -1016,7 +1016,7 @@ After applying the selection criteria, to the data collected between February 19
 \end{equation}
 with the requirement that the \nue's are detected within the \numu beam time window. The signature for a \nue interaction is a prompt  monoenergetic \electron with 12.5 MeV kinetic energy (which is calculated from the inital energy of \numu and the mass difference between $^{12}$C and $^{12}$N) and a delayed \positron with energies up to 16.3 MeV (which is the $\beta$--decay end-point energy). In order to distinguish the \nue's from oscillations and those due to the decay of $\mu^+$, oscillated \nue's were only considered between 0--110 ns and 330--440 ns after the beam-on-target. Additionally, the \positron was required to have an energy between 3.5 and 16.5 MeV during a time window of 0.5--36.5 ms after the beam time. From the data collected between June 1990 and May 1994, 3 candidate events were found. With an oscillation signal, 158.4 events are to be expected \cite{Limits_on_neutrino_oscillations_in_the_appearance_channels_numu_to_nue_and_numubar_to_nuebar}. 
 
-No evidence of oscillations was found from either channel, with the number of events observed being consistent with background predictions. 90\% confidence limit contours for both $\numu \rightarrow \nue$  and  $\numubar \rightarrow \nuebar$ are shown on the left of \FigureRef{fig:karmen_contours} from four years of data collected between 1990 and 1994. An updated $\numubar \rightarrow \nuebar$ 90\% confidence level exclusion contour is shown on the right of \FigureRef{fig:karmen_contours} from the data collected between 1997 and 2001 as well as external results from \gls{lsnd}, Bugey and CCFR \cite{LSND_excess}\cite{Bugey}\cite{CCFR} \cite{Upper_limits_for_neutrino_oscillations_numubar_to_nuebar_from_muon_decay_at_rest}\cite{Limits_on_neutrino_oscillations_in_the_appearance_channels_numu_to_nue_and_numubar_to_nuebar}.
+No evidence of oscillations was found from either channel, with the number of events observed being consistent with background predictions. 90\% confidence limit contours for both $\numu \rightarrow \nue$  and  $\numubar \rightarrow \nuebar$ are shown on the left of \FigureRef{fig:karmen_contours} from four years of data collected between 1990 and 1994. An updated $\numubar \rightarrow \nuebar$ 90\% confidence level exclusion contour is shown on the right of \FigureRef{fig:karmen_contours} from the data collected between 1997 and 2001 as well as external results from \gls{lsnd}, Bugey and CCFR \cite{LSND_excess}\cite{Upper_limits_for_neutrino_oscillations_numubar_to_nuebar_from_muon_decay_at_rest}\cite{Limits_on_neutrino_oscillations_in_the_appearance_channels_numu_to_nue_and_numubar_to_nuebar}\cite{Bugey}\cite{CCFR}.
 
 \begin{figure}[h!]
     \centering
@@ -1180,7 +1180,7 @@ The independent spectra from each of the 6 cells was compared with a given hypot
 
 \newpage
 \paragraph{Global Analysis}
-A global analysis may be performed to encompass experimental data from a number of experiments into a single result. The \gls{lsnd} and \gls{miniboone} experiments push the results away from the \gls{sm} and towards a (3+1) model, however, the mixing angles required to explain the \gls{lsnd} and \gls{miniboone} excess are in tension with \numu disappearance data. The different allowed regions from a (3+1) model as well the combined region are shown on the left of \FigureRef{fig:allowed_exclusion_region_tension} with large portions of the allowed regions not being excluded by appearance data. The combined allowed region along with the exclusion region from disappearance experiments are shown on the right of \FigureRef{fig:allowed_exclusion_region_tension} with the entire allowed region being excluded by the disappearance contour. The level of tension between the allowed region and disappearance data has been quantified in terms of a \textit{p}-value of $3.7 \times 10^{-7}$, which strongly disfavours the (3+1) model. A caveat in the calculation of the \textit{p}-value is that the global fits have assumed that Wilks' theorem applies, however, it is not entirely clear if this is true for neutrino experiments \cite{wilks_theorem}\cite{snowmass_2021}. 
+A global analysis may be performed to encompass experimental data from a number of experiments into a single result. The \gls{lsnd} and \gls{miniboone} experiments push the results away from the \gls{sm} and towards a (3+1) model, however, the mixing angles required to explain the \gls{lsnd} and \gls{miniboone} excess are in tension with \numu disappearance data. The different allowed regions from a (3+1) model as well the combined region are shown on the left of \FigureRef{fig:allowed_exclusion_region_tension} with large portions of the allowed regions not being excluded by appearance data. The combined allowed region along with the exclusion region from disappearance experiments are shown on the right of \FigureRef{fig:allowed_exclusion_region_tension} with the entire allowed region being excluded by the disappearance contour. The level of tension between the allowed region and disappearance data has been quantified in terms of a \textit{p}-value of $3.7 \times 10^{-7}$, which strongly disfavours the (3+1) model. A caveat in the calculation of the \textit{p}-value is that the global fits have assumed that Wilks' theorem applies, however, it is not entirely clear if this is true for neutrino experiments \cite{snowmass_2021}\cite{wilks_theorem}. 
 
 \begin{figure}
     \centering
