--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -53,7 +53,7 @@ In the analysis and validation of the shower reconstruction, a number of \textit
     \item Hit energy: This is the energy associated with each individual hit. Both true and reconstructed values may be obtained.
     \item Energy of showering particle: This is the energy of the particle which results in the shower which is being investigated. 
 \end{itemize}
-\subsection{Linear Energy Tool}\label{subchap:Linear Energy Tool}
+\subsection{Linear Energy}\label{subchap:Linear Energy Tool}
 The first shower energy reconstruction method developed was the \textit{Shower Linear Energy tool}. This tool relies on the linear relationship between the true energy deposited in the detector and the reconstructed charge from \gls{mip} muons. A sample of simulated muons are used as calibration because the $\frac{dE}{dx}$ value for electrons and \Gls{mip} muons are not dissimilar. The relationship between the charge obtained from the hits due to the muons and the energy deposited by the muons is shown in \FigureRef{fig:linear lookup curve}. A linear relationship such as this is comparable to assuming a constant recombination factor. 
 
 %\begin{center}
