--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -14,7 +14,7 @@ In order to perform an oscillation analysis, a number of inputs and analysis cho
 
 The events used in this oscillation analysis are truth based with a \textit{pseudo reconstruction} applied. Work on the reconstruction is still in progress and at the time of writing has not been sufficiently completed for it to be possible to generate a fully reconstructed event sample. The pseudo-reconstruction involves applying energy smearing and a series of cuts to try and emulate a fully reconstructed sample. The details of the cuts and smearing that were applied to each of the analyses are discussed in \SectionRef{sec:pseudo_event_reconstruction}.
 
-Both the events for the \numu and \nue sample were generated using \gls{genie}v3 (specifically the G18\_10a\_02\_11a tune) and then propagated through \gls{geant4} using the \gls{larsoft} framework \cite{GENIE}\cite{GENIE_V3_Paper}\cite{GENIE_tune}\cite{Geant4_website}\cite{larsoft}. For the \numu sample, this involved generating $\sim$1,000,000 intrinsic \numu events in each detector. The \nue sample is a little more involved since in addition to generating an intrinsic sample, an oscillated $\numu \rightarrow \nue$ sample, a dirt sample and a cosmic sample also needed to be produced. The oscillated sample is used to mimic the $\nue$ appearance signal whereas the dirt and cosmic samples are backgrounds. The other major background associated with a $\nue$ analysis involves $\numu$. A dedicated sample was not produced to emulate this, but instead, the events from the $\numu$ production were also run through the $\nue$ selection. Table \ref{T:nue_production} outlines the number of events produced for the \nue sample for each sub-sample for each detector. Additionally, the number of events that were selected from each sample are shown for all three detectors. The dirt events were produced with an additional filter at the generation stage which discarded any events where a shower above 10 MeV in the active volume was not present. This filter was used in order to remove any delta rays. Only about 1\% of dirt events would pass this filter so the number of dirt events used in the $\nue$ selection was $\sim$100,000. 
+Both the events for the \numu and \nue sample were generated using \gls{genie}v3 (specifically the G18\_10a\_02\_11a tune) and then propagated through \gls{geant4} using the \gls{larsoft} framework \cite{GENIE}\cite{Geant4_website}\cite{larsoft}\cite{GENIE_V3_Paper}\cite{GENIE_tune}. For the \numu sample, this involved generating $\sim$1,000,000 intrinsic \numu events in each detector. The \nue sample is a little more involved since in addition to generating an intrinsic sample, an oscillated $\numu \rightarrow \nue$ sample, a dirt sample and a cosmic sample also needed to be produced. The oscillated sample is used to mimic the $\nue$ appearance signal whereas the dirt and cosmic samples are backgrounds. The other major background associated with a $\nue$ analysis involves $\numu$. A dedicated sample was not produced to emulate this, but instead, the events from the $\numu$ production were also run through the $\nue$ selection. Table \ref{T:nue_production} outlines the number of events produced for the \nue sample for each sub-sample for each detector. Additionally, the number of events that were selected from each sample are shown for all three detectors. The dirt events were produced with an additional filter at the generation stage which discarded any events where a shower above 10 MeV in the active volume was not present. This filter was used in order to remove any delta rays. Only about 1\% of dirt events would pass this filter so the number of dirt events used in the $\nue$ selection was $\sim$100,000. 
 
 
 \begin{table}[h!]
@@ -107,7 +107,7 @@ A number of uncertainties associated with the neutrino flux, neutrino interactio
 
 The majority of flux and interaction systematic parameters considered are implemented using well-validated reweighting schemes provided by \gls{microboone} and \gls{genie} respectively (the two exceptions are the \gls{pot} normalisation and \gls{2p2h} uncertainty) \cite{BNB_flux}\cite{GENIE_manual}. For each \gls{mc} event and systematic parameter included in the reweight schemes, \textit{universes} are simulated where the given parameter is randomly varied within its limits. Each universe will therefore have a single parameter which is tweaked from its nominal value and for each parameter, 500 universes are simulated each with a different tweaked value for the parameter. This allows changes in event rate spectra to be related to systematic parameter variations. The systematic parameters considered are described below along with a table quoting their estimated uncertainty. 
 
-Currently, uncertainties due to detector effects remain largely unconstrained and therefore a dedicated package describing their effects does not exist. They are instead handled internally and are described in \SectionRef{sec:efficiency_syst}. 
+Currently, uncertainties due to detector effects remain largely unconstrained and therefore a dedicated package describing their effects does not exist. They are instead handled internally and are described in \SectionRef{sec:Impact of Additional Efficiency Systematics}. 
 
 %The majority of flux and interaction systematics considered are provided by the \gls{microboone} and GENIE reweight schemes respectively \cite{BNB_flux}\cite{GENIE_manual}. The two exceptions are the \gls{pot} normalisation and \gls{2p2h} uncertainty which are handled separately as described below. For each \gls{mc} event and systematic parameter included in the reweight schemes, \textit{universes} are simulated where the given parameters is randomly varied within its limits. Each universe will therefore have a single parameter which is tweaked from its nominal value and for each parameter, 500 universes are simulated. This allows changes in event rate spectra to be related to systematic parameter variations. The systematic parameters considered are described below along with a table quoting their estimated uncertainty. 
 
@@ -226,6 +226,10 @@ The uncertainties associated with neutrino interactions are provided by GENIE an
 where $\delta P$ represents the standard deviation of \textit{P}. It follows from \EquationRef{eqn:genie_reweight} that for a $x_P = 0$, $P' = P$ and for $x_P = \pm 1$, $P' = P \pm \delta P$.
 
 The two main types of interaction systematics considered in this analysis are cross-section and intranuclear hadron transport model uncertainties, however, within an \gls{sbn} analysis, the interaction systematics are generally grouped into two categories: the \textit{propsal} and \textit{modern} set of parameters. The proposal systematics are those that were included as part of the analysis done at the time of the \gls{sbn} proposal, whereas the modern systematics represent the additional systematics which have been deemed relevant for \gls{sbn} in the period following the proposal \cite{SBN_Proposal}. The details of how GENIE handles cross-section and intranuclear hadron transport parameters are detailed below, followed by outlining which parameters are included as part of the proposal and modern set of parameters.
+
+The cross-section uncertainties are based on \gls{genie} tunes which utilise data from hydrogen and deuterium bubble chamber experiments, namely ANL 12FT, BNL 7FT, BEBC and FNAL 15FT. The data corresponds to \numu and \numubar \gls{cc} inclusive scattering, \gls{cc} quasi-elastic scattering, \gls{cc} single pion production and \numu \gls{cc} two pion production. In total, a 169 data points were used in the fit obtained from the most recent datasets from a given experiment. Therefore, not all available data was used since older datasets which have been superseded have not been considered. Additionally, data points with a neutrino energy below 0.5 GeV are omitted due to smearing of the energy and absence of unfolding in the measurements \cite{GENIE_tune}.
+
+The intranuclear uncertainties are informed by use of the \gls{genie}  \textit{INTRANUKE hA} empirical model. The model is data-driven and considers the total cross-section of nuclear processes for pions and nucleons with energies up to 1.2 GeV. Typically the data is obtained by firing hadron beams onto a nuclear target \cite{GENIE_manual}\cite{GENIE_tune_CC0pi} \cite{Comparison_of_validation_methods_of_simulations_for_final_state_interactions_in_hadron_production_experiments}.
 
 \subsubsection*{Neutrino Cross-Section uncertainties}
 
