--- a/glossary.tex
+++ b/glossary.tex
@@ -17,8 +17,8 @@
 \newacronym{cp}{CP}{charge-parity}
 \newacronym{cpa}{CPA}{Cathode Plane Assembly}
 \newacronym{crt}{CRT}{Cosmic Ray Tagger}
-\newacronym{dar}{DAR}{decay at rest}
-\newacronym{dif}{DIF}{decay in flight}
+\newacronym{dar}{DAR}{decay {}at rest}
+\newacronym{dif}{DIF}{decay {}in flight}
 \newacronym{dis}{DIS}{Deep Inelastic Scattering}
 \newacronym{donut}{DONUT}{Direct Observation of the Nu Tau}
 \newacronym{dune}{DUNE}{Deep Underground Neutrino Experiment}
