--- a/mythesis.bib
+++ b/mythesis.bib
@@ -2379,6 +2379,70 @@ howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?
     year = "2021"
 }
 
+@article{GENIE_tune_CC0pi,
+    author = "Tena-Vidal, Julia and others",
+    collaboration = "GENIE",
+    title = "{Neutrino-nucleus CC0$\pi$ cross-section tuning in GENIE v3}",
+    eprint = "2206.11050",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "FERMILAB-PUB-22-296-ND-QIS-SCD",
+    doi = "10.1103/PhysRevD.106.112001",
+    journal = "Phys. Rev. D",
+    volume = "106",
+    number = "11",
+    pages = "112001",
+    year = "2022"
+}
+
+@article{Comparison_of_validation_methods_of_simulations_for_final_state_interactions_in_hadron_production_experiments,
+  title = {Comparison of validation methods of simulations for final state interactions in hadron production experiments},
+  author = {Dytman, S. and Hayato, Y. and Raboanary, R. and Sobczyk, J. T. and Tena-Vidal, J. and Vololoniaina, N.},
+  journal = {Phys. Rev. D},
+  volume = {104},
+  issue = {5},
+  pages = {053006},
+  numpages = {20},
+  year = {2021},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.104.053006},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.104.053006}
+}
+
+@article{NA61SHINE,
+    author = "Aduszkiewicz, A. and others",
+    collaboration = "NA61/SHINE",
+    title = "{Measurements of production and inelastic cross sections for p+C , p+Be , and p+Al at 60  GeV/c and p+C and p+Be at 120  GeV/c}",
+    eprint = "1909.03351",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-EP-2019-193",
+    doi = "10.1103/PhysRevD.100.112001",
+    journal = "Phys. Rev. D",
+    volume = "100",
+    number = "11",
+    pages = "112001",
+    year = "2019"
+}
+
+@article{Measurement_of_neutrino_flux_from_neutrino_electron_elastic_scattering,
+  title = {Measurement of neutrino flux from neutrino-electron elastic scattering},
+  author = {Park, J. and Aliaga, L. and Altinok, O. and Bellantoni, L. and Bercellie, A. and Betancourt, M. and Bodek, A. and Bravar, A. and Budd, H. and Cai, T. and Carneiro, M. F. and Christy, M. E. and Chvojka, J. and da Motta, H. and Dytman, S. A. and D\'{\i}az, G. A. and Eberly, B. and Felix, J. and Fields, L. and Fine, R. and Gago, A. M. and Galindo, R. and Ghosh, A. and Golan, T. and Gran, R. and Harris, D. A. and Higuera, A. and Kleykamp, J. and Kordosky, M. and Le, T. and Maher, E. and Manly, S. and Mann, W. A. and Marshall, C. M. and Martinez Caicedo, D. A. and McFarland, K. S. and McGivern, C. L. and McGowan, A. M. and Messerly, B. and Miller, J. and Mislivec, A. and Morf\'{\i}n, J. G. and Mousseau, J. and Naples, D. and Nelson, J. K. and Norrick, A. and Nuruzzaman and Osta, J. and Paolone, V. and Patrick, C. E. and Perdue, G. N. and Rakotondravohitra, L. and Ramirez, M. A. and Ray, H. and Ren, L. and Rimal, D. and Rodrigues, P. A. and Ruterbories, D. and Schellman, H. and Solano Salinas, C. J. and Tagg, N. and Tice, B. G. and Valencia, E. and Walton, T. and Wolcott, J. and Wospakrik, M. and Zavala, G. and Zhang, D.},
+  collaboration = {MINER\ensuremath{\nu}A Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {93},
+  issue = {11},
+  pages = {112007},
+  numpages = {12},
+  year = {2016},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.93.112007},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.93.112007}
+}
+
+
 @misc{Geant4_website,
    title="{GEANT4 A Simulation Toolkit}",
    howpublished = "{\url{https://geant4.web.cern.ch/}}",
@@ -2439,6 +2503,13 @@ abstract = {Geant4 is a toolkit for simulating the passage of particles through 
     keywords = {Liquid Argon, Neutrino, Sterile Neutrino, SBN, SBND, Oscillation},
     url = {https://livrepository.liverpool.ac.uk/id/eprint/3143192},
     doi = {10.17638/03143192}
+}
+
+@phdthesis{Julia's_thesis,
+    title = "{Global Analysis of Muon-Neutrino Charged-Current Data for the Characterization and Tuning of Cross-Section and Hadronization Models in the GENIE Neutrino EventGenerator}",
+    school = {University of Liverpool},
+    author = {J\'{u}lia Tena Vidal},
+    year = {2022},
 }
 
 @article{Asimov_dataset,
