--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 
 % hyperref was loaded automatically in hepthesis.cls but the metdata stuff wasn't working (think hyperref) was being loaded at the "wrong" time
 % commented it out there and manually loaded it here - I think hyperref should be loaded at the end but it works fine here so going with it
-%\usepackage{hyperref}
+\usepackage{hyperref}
 %% Doc-specific PDF metadata
 \makeatletter
 \@ifpackageloaded{hyperref}{%
@@ -64,27 +64,27 @@
 
 %% Define the un-numbered front matter (cover pages, rubrik and table of contents)
 \begin{frontmatter}
-  %\input{liverpool_title_page}
-  %\input{frontmatter}
+  \input{liverpool_title_page}
+  \input{frontmatter}
 \end{frontmatter}
 
 %% Start the content body of the thesis
 \begin{mainmatter}
   %% Actually, more semantic chapter filenames are better, like "chap-bgtheory.tex"
-  %\input{chap1-introduction}
-  %\input{chap2-motivation_for_steriles}
-  %\input{chap3-SBN_Program}
-  %\input{chap4-Energy_Reco}
-  %\input{chap5-oscillation_inputs}
+  \input{chap1-introduction}
+  \input{chap2-motivation_for_steriles}
+  \input{chap3-SBN_Program}
+  \input{chap4-Energy_Reco}
+  \input{chap5-oscillation_inputs}
   \input{chap6-valor_analysis_2}
-  %\input{chap7-conclusion}
+  \input{chap7-conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
 \end{mainmatter}
 
 %% Produce the appendices
 \begin{appendices}
-  %\input{appendices}
+  \input{appendices}
 \end{appendices}
 
 %% Produce the un-numbered back matter (e.g. colophon,
